# dsi-muxer

./: README.md  pyproject.toml
src/dsi_muxer/: __init__.py  __main__.py  container.py
src/dsi_muxer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_mux.py
